<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4E4E"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/act1_categoria_spn"
        android:layout_width="245dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:spinnerMode="dialog"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/act1_addCategoria_btn"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/act1_subCategoria_spn"
        android:layout_width="245dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:spinnerMode="dialog"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/act1_addSubcategoria_btn"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act1_categoria_spn" />

    <EditText
        android:id="@+id/act1_cuantia_numText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Importe"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act1_subCategoria_spn" />

    <Button
        android:id="@+id/act1_guardar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/guardar_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/act1_resumen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/resumen_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/act1_addCategoria_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addCategoria_btn"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/act1_categoria_spn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/act1_addSubcategoria_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addSubcategoria_btn"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/act1_subCategoria_spn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/act1_fecha_editText"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Cambiar fecha"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/act1_resumen_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act1_comentario_editText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/act1_comentario_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="Comentario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act1_cuantia_numText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_categoría"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/act1_categoria_spn"
        app:layout_constraintStart_toStartOf="@+id/act1_categoria_spn"
        tools:text="@string/tv_categoría" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_subcategoria"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/act1_subCategoria_spn"
        app:layout_constraintStart_toStartOf="@+id/act1_subCategoria_spn"
        tools:text="@string/tv_subcategoria" />

</androidx.constraintlayout.widget.ConstraintLayout>